# megadata

./: .gitignore  LICENSE  README.md  build.bat  conda_setup.bat  megadata.py  pyproject.toml  setup.py  todo_setup.py  upload.bat
_del/: apiAdm.py  dapr.txt
_del/tests/: apiAdm.py  clt_zmq_ab.py  common.py  eg_ipc_svr.py  eg_myeval_logger.py  eg_svr_nng.py  eg_zmq_clt.py  inc_mypy.py  test_mypy.py
megadata/: __init__.py  __main__.py  apiTest.py  bizkv.py  clt_ipc.py  clt_rpc.py  clt_web.py  myeval.py  myevalasync.txt  mypy.py  mypygist.py  mypyx.py  mywin.py  svr_echo.py  svr_ipc.py  svr_ipc_async.py  svr_ipc_bin.py  svr_ipcm.py  svr_ipcx.py  svr_nng.py
megadata/tests/: apiAdm.py  eg_ipc.py  eg_server_ipc.py  eg_svr_ipc.py  test_mypy.py  test_parallelx.py
tests/: apiAdm.py  call_clt_ipc.py  clt_nng_ab.py  eg_clt_ipc.py  eg_clt_nng.py  eg_ipc_clt.py  eg_ipc_clt_ab.py  eg_ipc_svr.py  eg_svr_nng.py  eg_zmq_svr.py  svr_nng.py  test_myeval.py
