[project]
name = "megadata"
version = "0.0.8"
authors = [
  { name="Wanjo Chan", email="wanjochan@gmail.com" },
]
description = "tools for megadata"
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wanjo-tech/megadata"
"Bug Tracker" = "https://github.com/wanjo-tech/megadata/issues"
