[project]
name = "megadata"
version = "0.0.26"
authors = [
  { name="Wanjo Chan", email="wanjochan@gmail.com" },
]
description = "tools from/for megadata"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/wanjo-tech/megadata"

